<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/txt_password"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/ed_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:hint="@string/txt_old_password"

                android:inputType="textPassword" />

            <TextView
                android:id="@+id/error_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ed_Change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:hint="@string/txt_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/error_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ed_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/txt_change_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/error_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_save"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <include
            android:id="@+id/pb_progress_bar"
            layout="@layout/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top|end"
        android:background="@drawable/close_circle"
        android:scaleType="center"
        android:src="@drawable/ic_close_white_24dp" />
</FrameLayout>

